--- a/main.css
+++ b/main.css
@@ -275,3 +275,21 @@ b {
 }
 
 /* ===== IMAGERY ===== */
+
+.imagery {
+    display: flex;
+}
+
+.image {
+    width: 50%;
+    padding: 20px;
+}
+
+.image img {
+    max-width: 100%;
+}
+
+.caption {
+    max-width: 50%;
+    padding: 20px;
+}
